@@ -68,7 +68,7 @@ object EnrichedEventLoader {
   // kind of Scalding pack()
   def toEnrichedEvent(line: String): ValidatedCanonicalOutput = {
 
-    val fields = line.split("\t").map(f => if (f == "") null else f)
+    val fields = line.split("\t", -1).map(f => if (f == "") null else f)
     val len = fields.length
     if (len < FieldCount)
       return s"Line does not match Snowplow enriched event (expected ${FieldCount}+ fields; found $len)".failNel[CanonicalOutput]
