@@ -43,6 +43,7 @@ Scala Common Enrich: added validation for transaction ID (#428)
 Scala Common Enrich: rename Tests to Specs for consistency (#618)
 Scala Hadoop Shred: bumped to 0.2.0
 Scala Hadoop Shred: bumped to Scala Common Enrich 0.5.0 (#918)
+Scala Hadoop Shred: trailing empty fields no longer causes shredding for that row to fail (#921)
 Scala Hadoop Shred: updated column offsets for enriched events TSV (#915)
 Redshift: bumped table-def to 0.4.0
 Redshift: migration script added for 0.3.0 to 0.4.0
